--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
-<h4>glia.com.ar</h4>
+<p>
+   <img src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUA
+AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
+    9TXL0Y4OHwAAAABJRU5ErkJggg==" alt="Red dot" /> glia.com.ar </p>
 </body>
 </html>
